# Camera-sem-db

./: reconhecimento.py
monitoramento-veiculos-roubados/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
monitoramento-veiculos-roubados/configs/: logging.conf  settings.example.yaml
monitoramento-veiculos-roubados/scripts/: check_health.py  run_dev.sh  seed_demo_data.py
monitoramento-veiculos-roubados/src/: __init__.py  main.py
monitoramento-veiculos-roubados/src/api/: deps.py
monitoramento-veiculos-roubados/src/api/routes/: __init__.py  alerts.py  monuv_webhooks.py
monitoramento-veiculos-roubados/src/core/: __init__.py  config.py  database.py  logging.py
monitoramento-veiculos-roubados/src/services/integracoes/: alerta_brasil_client.py  detecta_client.py
monitoramento-veiculos-roubados/src/services/lpr/: processor.py  validators.py
monitoramento-veiculos-roubados/src/services/matching/: matcher.py  plates_repository.py
monitoramento-veiculos-roubados/src/services/monuv/: client.py  webhook_handler.py
monitoramento-veiculos-roubados/src/services/notifications/: dispatcher.py  police_notifier.py
monitoramento-veiculos-roubados/src/services/storage/: cache.py  firebase.py
monitoramento-veiculos-roubados/src/types/: models.py
monitoramento-veiculos-roubados/src/workers/: consumer.py  scheduler.py
monitoramento-veiculos-roubados/tests/: test_integrations.py  test_lpr.py
