[tool.poetry]
name = "monitoramento-veiculos-roubados"
version = "0.1.0"
description = "Sistema de monitoramento de veículos roubados com integração a APIs de segurança."
authors = ["Seu Nome <seuemail@example.com>"]
license = "MIT"
package-mode = false  # projeto de aplicação: não precisa empacotar/instalar a si próprio

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
httpx = "^0.27.2"
easyocr = "^1.3.2"
firebase-admin = "^5.2.0"
pydantic = "^1.8.2"
requests = "^2.26.0"
SQLAlchemy = "^2.0.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"